<resources>
    <string name="app_name">SeekAdventure</string>
    <string name="app_email">seekadventure@gmail.com</string>
    <string name="app_slogan">Work, Travel, Save, Repeat</string>
    <string name="getStarted_button">Get Started</string>
    <string name="logo">logo</string>
    <string name="header">Discover</string>
    <string name="header2">Travel Log</string>
    <string name="subheading">Popular</string>
    <string name="subheading2">Recommended</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name = "createButton"> + Create Journal</string>
    <string name = "travel_menu">Journey on the way!</string>
    <string name = "moments">Fun Moments:</string>
    <string name ="weather">Weather:</string>
    <string name ="transport">Transportation:</string>
    <string name = "fun_facts">Fun Facts: </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>